--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body
 {
 	padding: 0;
 	margin: 0 ;
-	background-image: url('ronds.jpg');
+	background-image: url('fond.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover ;
@@ -22,7 +22,7 @@ body
 	padding: 20px;
 	background: #ccc;
 	height:50px;
-	background-image: url('haut.jpg');
+	background-color: #FFA500;
 	background-repeat: no-repeat;
 	background-size: cover ;
 	background-position:center; 
@@ -136,7 +136,7 @@ h2,h3
 	font-weight: bold;
 	padding: 20px;
 	height: 1%;
-	background-image: url('bas.jpg');
+	background-color: #FFA500;
 	background-repeat: no-repeat;
 	background-size: cover ;
 	background-position:center; 
